--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "express": "^4.19.2",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.4",
-    "sequelize": "^6.37.3",
-    "sinesp-api": "^3.0.0",
-    "vmotionguard": "file:"
+    "sequelize": "^6.37.3"
   }
 }
